# karlsen-miner

./: .gitignore  Cargo.toml  README.md  build.rs  build_fishlibs.sh  karlsen-cuda.ptx  run_miner.sh  run_miner_devnet_remote.sh
.github/workflows/: ci.yaml  deploy.yaml
integrations/hiveos/: createmanifest.sh  h-config.sh  h-run.sh  h-stats.sh
integrations/windows/: create_bat.sh
plugins/: README.md
plugins/cuda/: Cargo.toml  README.md
plugins/cuda/karlsen-cuda-native/src/: cuda_helper.h  fishhash_cuda_kernel.cuh  fishhash_cuda_kernel.h  fnv.cuh  karlsen-cuda.cu  keccak-tiny.c  keccak.cuh
plugins/cuda/kaspa-cuda-native/src/: fishhash_cuda_kernel.cuh  kaspa-cuda.cu  keccak-tiny.c
plugins/cuda/resources/: karlsen-cuda-sm61.ptx  karlsen-cuda-sm75.ptx  karlsen-cuda-sm86.ptx  kaspa-cuda-sm61.ptx  kaspa-cuda-sm75.ptx  kaspa-cuda-sm86.ptx
plugins/cuda/src/: lib.rs  worker.rs
plugins/karlsengpt/: Cargo.toml
plugins/karlsengpt/src/: cli.rs  lib.rs  worker.rs
plugins/opencl/: Cargo.toml  README.md
plugins/opencl/src/: lib.rs  worker.rs
proto/: messages.proto  p2p.proto  rpc.proto
scripts/: run_miner_cpu_devnet.sh  run_miner_devnet.sh  run_miner_devnet_remote.sh  run_miner_simnet.sh  run_miner_testnet.sh  run_miner_testnet_lan.sh  run_miner_testnet_remote.sh
src/: cli.rs  client.rs  karlsend_messages.rs  lib.rs  main.rs  miner.rs  pow.rs  watch.rs
src/client/: grpc.rs  stratum.rs
src/client/stratum/: statum_codec.rs
src/pow/: hasher.rs  heavy_hash.rs  karlsen_hasher.rs
