[package]
name = "karlsen-miner"
version = "3.0.0"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/karlsen-network/karlsen-miner"
readme = "README.md"
description = "A fast CPU & GPU miner for Karlsen"
categories = ["command-line-utilities"]
keywords = ["blockchain", "cli"]
include = [
    "src/**/*.rs",
    "src/**/*.s",
    "proto/**",
    "Cargo.toml",
    "Cargo.lock",
    "build.rs",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "README.md",
]

[dependencies]
lazy_static = "1.4.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
blake3 = "1.5.0"
tonic = "0.12"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
prost = "0.13.5"
futures-util = "0.3"
tokio-stream = {version = "0.1", features = ["net"]}
once_cell = "1"
num_cpus = "1"
rand = "0.9"
blake2b_simd = "1.0.0"
clap = { version = "3.0", features = ["color", "derive"]}
log = "0.4"
env_logger = "0.11"
keccak = { version = "0.1", optional = true }
parking = { package = "parking_lot", version = "0.12", optional = true }
shuttle = { version = "0.8", optional = true }
libloading = "0.8.6"
tokio-util = {version = "0.7.0", features = ["codec"]}
serde_json = "1.0"
serde_repr = "0.1"
serde =  {version="1.0", features=["derive"]}
futures = "0.3.21"
bytes = "1.1.0"
async-trait = "0.1"
num = "0.4"
nix = "0.25"
hex = "0.4"
time = { version = "0.3", features = ["formatting", "macros"] }

[features]
default = ["keccak?/asm", "parking_lot"]
parking_lot = ["parking", "tokio/parking_lot"]
bench = []
no-asm = ["keccak"]

[target.'cfg(target_os = "windows")'.dependencies]
kernel32-sys = "0.2"
win32console = "0.1"

[target.'cfg(not(target_arch = "x86_64"))'.dependencies]
keccak = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true

[build-dependencies]
tonic-build = { version = "0.8", default-features = false, features = ["prost", "transport"] }
cc = "1"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
sha3 = { git = "https://github.com/elichai/hashes", branch = "cSHAKE" }

[workspace]
members = ["plugins/*"]
default-members = [".", "plugins/cuda"]
