[package]
name = "karlsengpt"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
karlsen-miner = {path = "../../"}
log = "0.4"
clap = { version = "3.0", features = ["color", "derive"]}
env_logger = "0.9"
regex = { git = "https://github.com/rust-lang/regex.git" }
llama-cpp-2 = "0.1.82"
hf-hub = { version = "0.3.2" }
anyhow = "1.0.86"
encoding_rs = "0.8.34"

[features]
cuda = ["llama-cpp-2/cuda"]
metal =  ["llama-cpp-2/metal"]
native = ["llama-cpp-2/native"]
vulkan = ["llama-cpp-2/vulkan"]

[lib]
crate-type = ["cdylib", "rlib"]

